# Process-monitor

./: CMakeLists.txt  README.rst  dataloader.cpp  dataloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  usedmemorywidget.cpp  usedmemorywidget.h
translations/: Process_monitor_en_US.ts  Process_monitor_uk_UA.ts
